Using firebase now

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en">
 <!--  NOTES:
 To use material items ex: import Button from 'material-ui/Button';
