--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@ To use material items ex: import Button from 'material-ui/Button';
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXvfbFh1UkUhlVI7vfycrxxCOUIDgWW0A&libraries=places"></script>
+    <script async defer
+   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXvfbFh1UkUhlVI7vfycrxxCOUIDgWW0A&callback=initMap">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
