Google Maps Officially Works

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ To use material items ex: import Button from 'material-ui/Button';
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsn8Nv2dlghAVPhBK3ynj1vu2L_DNpKbY&libraries=places"></script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsn8Nv2dlghAVPhBK3ynj1vu2L_DNpKbY&libraries=places"></script>
     <script async defer
    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXvfbFh1UkUhlVI7vfycrxxCOUIDgWW0A&callback=initMap">
     <!--
