--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@ To use material items ex: import Button from 'material-ui/Button';
     <!-- initialize the SDK after all desired features are loaded -->
     <!--  -->
     <script defer src="/__/firebase/init.js"></script>
+    <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
 
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
