--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@ To use material items ex: import Button from 'material-ui/Button';
         // body { border-top: 16px solid #ffa100; }
       }
     </style>
-    <title>React App</title>
+    <title>EventFUL</title>
   </head>
   <body>
     <noscript>
